--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -193,11 +193,9 @@
                 android:textSize="14sp"
                 android:textStyle="normal" />
 
-            <EditText
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:singleLine="true"
-                android:maxLength="180"
+                android:layout_height="wrap_content"
                 android:id="@+id/edt_address"
                 android:layout_below="@+id/txt3"
                 android:layout_marginLeft="15dp"
@@ -206,6 +204,13 @@
 
 
         </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@color/grey_light"/>
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_marginTop="20dp"
