my changes 19th feb 2021

--- a/app/src/main/res/layout/custom_enlarge_image_layout.xml
+++ b/app/src/main/res/layout/custom_enlarge_image_layout.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <com.smarteist.autoimageslider.SliderView
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:scaleType="fitXY"
-        android:id="@+id/recyclerviewSroll"
-        android:adjustViewBounds="true"
+        android:id="@+id/imageSlider"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-      />
+        android:layout_height="200dp"
+        app:sliderAnimationDuration="600"
+        app:sliderAutoCycleDirection="back_and_forth"
+        app:sliderAutoCycleEnabled="false"
+        app:sliderCircularHandlerEnabled="false"
+        app:sliderIndicatorAnimationDuration="600"
+        app:sliderScrollTimeInSec="1"
+        app:sliderStartAutoCycle="false" />
     <ImageView
         android:id="@+id/my_image"
         android:scaleType="fitXY"
