my changes 19th feb 2021

--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -264,7 +264,7 @@ android:background="#dbdbdb"/>
 
 
                   <TextView
-                      android:id="@+id/txt_siz"
+                      android:id="@+id/txt_model"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="14sp"
@@ -280,7 +280,7 @@ android:background="#dbdbdb"/>
                       android:layout_width="240dp"
                       android:layout_marginLeft="25dp"
                       android:layout_marginTop="10dp"
-                      android:layout_toRightOf="@+id/txt_siz"
+                      android:layout_toRightOf="@+id/txt_model"
                       android:background="@drawable/greylight_stroke"
                       android:layout_height="40dp">
                       <Spinner
@@ -299,6 +299,96 @@ android:background="#dbdbdb"/>
 
 
               </RelativeLayout>
+
+
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:id="@+id/rl_size"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/txt_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/open_sans_regular"
+                    android:textColor="@color/black"
+                    android:text="Size"/>
+
+                <RelativeLayout
+                    android:layout_width="240dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_toRightOf="@+id/txt_size"
+                    android:background="@drawable/greylight_stroke"
+                    android:layout_height="40dp">
+                    <Spinner
+                        android:id="@+id/spin_size"
+                        android:layout_width="fill_parent"
+                        android:textSize="14sp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginLeft="70dp"
+                        android:padding="1dip"
+                        android:prompt="@string/spinner_title"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"/>
+                </RelativeLayout>
+
+
+            </RelativeLayout>
+
+
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:id="@+id/rl_weight"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/txtWeight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/open_sans_regular"
+                    android:textColor="@color/black"
+                    android:text="Weight"/>
+
+                <RelativeLayout
+                    android:layout_width="240dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_toRightOf="@+id/txtWeight"
+                    android:background="@drawable/greylight_stroke"
+                    android:layout_height="40dp">
+
+
+
+
+                    <TextView
+                        android:id="@+id/tx_Weight"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:gravity="center"
+                        android:layout_centerVertical="true"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:fontFamily="@font/open_sans_regular"
+                        android:textColor="@color/black"
+                        android:text="Select weight"/>
+
+
+
+                </RelativeLayout>
+
+
+            </RelativeLayout>
+
 
 
 
@@ -462,6 +552,7 @@ android:background="#dbdbdb"/>
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
                     android:text="Weight      :"
+                    android:visibility="gone"
                     android:layout_marginTop="5dp"
                     android:layout_below="@+id/txt_brand"
                     android:textColor="@color/black"
@@ -474,6 +565,7 @@ android:background="#dbdbdb"/>
                     android:id="@+id/rl_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_below="@+id/txt_brand"
                     android:layout_toRightOf="@+id/txt_weight1">
 
@@ -510,7 +602,7 @@ android:background="#dbdbdb"/>
                     android:layout_below="@+id/rl_1"
                     android:fontFamily="@font/open_sans_regular"
                     android:text="Description :"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="10dp"
                     android:textColor="@color/black"
                     android:textSize="14sp" />
 
