--- a/app/src/main/res/layout/activity_redemp_item_detail.xml
+++ b/app/src/main/res/layout/activity_redemp_item_detail.xml
@@ -16,13 +16,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="180dp">
 
+
                 <ImageView
                     android:id="@+id/imgProduct"
                     android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginBottom="0dp"
                     android:scaleType="centerInside"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/a5"/>
-
+                 />
 
                 <RelativeLayout
                     android:id="@+id/rl_back"
@@ -383,7 +386,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/open_sans_regular"
-                        android:text="Kg"
                         android:visibility="visible"
                         android:layout_toRightOf="@+id/txt_Netweight"
                         android:layout_marginRight="15dp"
@@ -558,7 +560,7 @@
                         android:layout_marginRight="15dp"
                         android:fontFamily="@font/lato_bold"
                         android:text=""
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:textColor="@color/blue"
                         android:textSize="14sp" />
 
