--- a/app/src/main/res/layout/paymentsucessful.xml
+++ b/app/src/main/res/layout/paymentsucessful.xml
@@ -8,7 +8,7 @@
         android:id="@+id/rl"
 
         android:layout_width="match_parent"
-        android:layout_height="135dp">
+        android:layout_height="150dp">
 
         <TextView
             android:id="@+id/txtLocal"
@@ -35,7 +35,17 @@
             android:textColor="#222"
             android:text="We will arrange to post out your parcel within 3 working days."/>
 
-
+    <Button
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/txt"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:id="@+id/btn_ok"
+        android:text="Ok"
+        android:textColor="@color/black"
+        android:background="@drawable/greyew_rounded"/>
 
     </RelativeLayout>
 <RelativeLayout
