--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -229,17 +229,42 @@
                     android:layout_marginLeft="15dp"
                     />
 
-                <EditText
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:orientation="horizontal"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_below="@+id/txt_3">
+                    <LinearLayout
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_gravity="center_vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:id="@+id/txt_countrycode"/>
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@color/black"/>
+
+
+                    </LinearLayout>
+
+
+                    <EditText
                         android:id="@+id/edt_contact"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
                         android:layout_centerVertical="true"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
                         android:backgroundTint="@color/grey_light"
                         android:fontFamily="@font/open_sans_regular"
                         android:hint="Contact"
-                         android:layout_below="@+id/txt_3"
                         android:inputType="number"
                         android:maxLength="22"
                         android:maxLines="1"
@@ -250,6 +275,13 @@
 
 
                     </EditText>
+
+
+                </LinearLayout>
+
+
+
+
 
 
 
