--- a/app/src/main/res/layout/activity_mobile_o_t_p.xml
+++ b/app/src/main/res/layout/activity_mobile_o_t_p.xml
@@ -208,6 +208,7 @@
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     android:gravity="center"
+                    android:maxLength="1"
                     android:inputType="number"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
@@ -243,6 +244,7 @@
                 android:gravity="center"
                 android:textColor="@color/white"
                 android:textStyle="bold"
+                android:maxLength="1"
                 android:inputType="number"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
@@ -273,6 +275,7 @@
                 android:visibility="visible"
                 android:textColor="@color/white"
                 android:gravity="center"
+                android:maxLength="1"
                 android:textStyle="bold"
                 android:inputType="number"
                 android:layout_marginStart="5dp"
@@ -309,6 +312,7 @@
                 android:textStyle="bold"
                 android:visibility="visible"
                 android:inputType="number"
+                android:maxLength="1"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:background="@null"/>
