--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -400,6 +400,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/open_sans_regular"
                         android:text="Kg"
+                        android:visibility="gone"
                         android:layout_toRightOf="@+id/txt_weight"
                         android:layout_marginRight="15dp"
                         android:textColor="@color/black"
@@ -410,7 +411,7 @@
                         android:id="@+id/txt_weight"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginRight="15dp"
                         android:fontFamily="@font/open_sans_regular"
                         android:text="-"
                         android:textColor="@color/black"
