--- a/app/src/main/res/layout/activity_order_product_details.xml
+++ b/app/src/main/res/layout/activity_order_product_details.xml
@@ -19,8 +19,8 @@
                     android:id="@+id/imgProduct"
                     android:layout_width="match_parent"
                     android:scaleType="centerInside"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/a5"/>
+                    android:layout_height="match_parent"
+                    />
 
 
                 <RelativeLayout
