--- a/app/src/main/res/layout/activity_rewards_details.xml
+++ b/app/src/main/res/layout/activity_rewards_details.xml
@@ -22,7 +22,7 @@
                     android:layout_width="match_parent"
                     android:scaleType="centerInside"
                     android:layout_height="match_parent"
-                    android:src="@drawable/rod"/>
+                    />
 
                 <RelativeLayout
                     android:id="@+id/rl_back"
@@ -213,10 +213,9 @@
                     android:layout_height="40dp">
                     <Spinner
                         android:id="@+id/spin_color"
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:textSize="14sp"
                         android:layout_alignParentRight="true"
-                        android:layout_marginLeft="50dp"
                         android:padding="1dip"
                         android:prompt="@string/spinner_color"
                         android:layout_height="wrap_content"
@@ -253,10 +252,9 @@
                     android:layout_height="40dp">
                     <Spinner
                         android:id="@+id/spin_model"
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:textSize="14sp"
                         android:layout_alignParentRight="true"
-                        android:layout_marginLeft="50dp"
                         android:padding="1dip"
                         android:prompt="@string/spinner_title"
                         android:layout_height="wrap_content"
@@ -264,14 +262,54 @@
                 </RelativeLayout>
 
             </RelativeLayout>
+
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:id="@+id/rl_5"
+                android:id="@+id/rl_size"
                 android:layout_height="wrap_content">
-
-
                 <TextView
-                    android:id="@+id/txt_weight1"
+                    android:id="@+id/txt_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/open_sans_regular"
+                    android:textColor="@color/black"
+                    android:text="Size"/>
+
+                <RelativeLayout
+                    android:layout_width="200dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_toRightOf="@+id/txt_size"
+                    android:background="@drawable/greylight_stroke"
+                    android:layout_height="40dp">
+                    <Spinner
+                        android:id="@+id/spin_size"
+                        android:layout_width="match_parent"
+                        android:textSize="14sp"
+                        android:layout_alignParentRight="true"
+                        android:padding="1dip"
+                        android:prompt="@string/spinner_title"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"/>
+                </RelativeLayout>
+
+
+            </RelativeLayout>
+
+
+
+
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:id="@+id/rl_weight"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/txtWeight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
@@ -282,29 +320,40 @@
                     android:textColor="@color/black"
                     android:text="Weight"/>
 
-
                 <RelativeLayout
                     android:layout_width="200dp"
-                    android:layout_marginLeft="25dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
-                    android:layout_toRightOf="@+id/txt_weight1"
+                    android:layout_toRightOf="@+id/txtWeight"
                     android:background="@drawable/greylight_stroke"
                     android:layout_height="40dp">
-                    <Spinner
-                        android:id="@+id/spin_weight"
-                        android:layout_width="fill_parent"
-                        android:textSize="14sp"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginLeft="50dp"
-                        android:padding="1dip"
-                        android:prompt="@string/spinner_title"
+
+
+
+
+                    <TextView
+                        android:id="@+id/tx_Weight"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"/>
+                        android:gravity="start"
+                        android:paddingLeft="15dp"
+                        android:textSize="15sp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:hint="select weight"
+                        android:textColorHint="@color/black"
+                        android:fontFamily="@font/open_sans_regular"
+                        android:textColor="@color/black" />
+
+
+
                 </RelativeLayout>
 
 
-
             </RelativeLayout>
+
+
 
 
 
