--- a/app/src/main/res/layout/activity_show_new_arrival.xml
+++ b/app/src/main/res/layout/activity_show_new_arrival.xml
@@ -100,6 +100,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:nestedScrollingEnabled="true"
                     android:id="@+id/rec_newArrival"/>
 
 
