--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -66,16 +66,19 @@
             android:background="#fafafa">
 
             <com.smarteist.autoimageslider.SliderView
-
                 android:id="@+id/imageSlider"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="0dp"
+                android:layout_marginBottom="0dp"
                 app:sliderAnimationDuration="600"
                 app:sliderAutoCycleDirection="back_and_forth"
                 app:sliderAutoCycleEnabled="true"
-                app:sliderIndicatorRadius="1dp"
                 app:sliderCircularHandlerEnabled="true"
                 app:sliderIndicatorAnimationDuration="600"
+                app:sliderIndicatorRadius="1dp"
                 app:sliderScrollTimeInSec="1"
                 app:sliderStartAutoCycle="true" />
 
