--- a/app/src/main/res/layout/rec_addresslist_layout.xml
+++ b/app/src/main/res/layout/rec_addresslist_layout.xml
@@ -34,6 +34,7 @@
                 android:layout_below="@+id/txt_name"
                 android:layout_marginLeft="10dp"
                 android:text=""
+                android:visibility="gone"
                 android:gravity="center_vertical"
                 android:textColor="@color/grey_light"
                 android:fontFamily="@font/open_sans_regular"
