--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -148,15 +148,18 @@
                 android:fontFamily="@font/opensans_bold"
                 android:textSize="14sp"
                 android:textStyle="normal" />
-            <TextView
+            <EditText
                 android:id="@+id/txt_country"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
                 android:layout_marginLeft="15dp"
                 android:text=""
+                android:hint="+60"
+                android:digits="+1234567890"
+                android:inputType="number"
                 android:gravity="center_vertical"
                 android:layout_below="@+id/txt2"
-                android:textColor="@color/grey_light"
+                android:textColor="@color/black"
                 android:fontFamily="@font/open_sans_regular"
                 android:textSize="16sp"
                 android:textStyle="normal" />
