--- a/app/src/main/res/layout/activity_reedeem_pop_up.xml
+++ b/app/src/main/res/layout/activity_reedeem_pop_up.xml
@@ -335,7 +335,7 @@
                     android:id="@+id/txt_weight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
+   android:layout_marginEnd="10dp"
                     android:fontFamily="@font/open_sans_regular"
                     android:text="-"
                     android:textColor="@color/black"
@@ -343,6 +343,7 @@
 
                 <TextView
                     android:id="@+id/txt_sym"
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@+id/txt_weight"
@@ -394,7 +395,7 @@
                     android:id="@+id/txt_deliv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="15dp"
+                    android:layout_marginRight="10dp"
                     android:layout_toRightOf="@+id/txt_sym1"
                     android:fontFamily="@font/open_sans_regular"
                     android:text="-"
@@ -450,6 +451,8 @@
 
         </RelativeLayout>
     </RelativeLayout>
+
+
     <com.github.ybq.android.spinkit.SpinKitView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/spin_kit"
@@ -460,4 +463,6 @@
         android:layout_centerInParent="true"
         style="@style/SpinKitView.ChasingDots"
         app:SpinKit_Color="@color/pink"/>
+
+
 </RelativeLayout>
