--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".Activities.ProductDetailsActivity">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -563,7 +563,6 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:text=""
-
                         android:textColor="@color/black"
                         android:textSize="14sp"
                         android:visibility="gone" />
@@ -581,48 +580,163 @@
                 </RelativeLayout>
 
 
-                <TextView
-                    android:id="@+id/txt_des"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <View
+                    android:id="@+id/view22"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
                     android:layout_below="@+id/rl_1"
                     android:layout_marginTop="10dp"
-                    android:fontFamily="@font/open_sans_regular"
-                    android:text="Description :"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
-
-
-                <TextView
-                    android:id="@+id/txt_description"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/txt_des"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="15dp"
-                    android:fontFamily="@font/open_sans_regular"
-                    android:text="-"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
-
-
+                    android:layout_marginBottom="5dp"
+                    android:background="@color/black" />
             </RelativeLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rec_product_video"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
 
-            <ImageView
-                android:id="@+id/img_video"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="15dp"
-                android:layout_marginBottom="10dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/download"
-                android:visibility="gone" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="2"
+                    android:orientation="horizontal">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:id="@+id/ll1"
+                        android:layout_marginEnd="2.5dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/txt_des"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_weight="1"
+                            android:textAlignment="center"
+                            android:fontFamily="@font/open_sans_regular"
+                            android:text="Description :"
+                            android:textColor="@color/black"
+                            android:textSize="14sp" />
+
+                        <View
+                            android:id="@+id/viewOfDecription"
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_below="@+id/txt_des"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="5dp"
+                            android:background="@color/black" />
+
+                    </LinearLayout>
+
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:id="@+id/ll2"
+                        android:layout_marginStart="2.5dp"
+                        android:orientation="vertical">
+
+
+                        <TextView
+                            android:id="@+id/txtReview"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:textAlignment="center"
+                            android:fontFamily="@font/open_sans_regular"
+                            android:text="Reviews"
+                            android:textColor="@color/black"
+                            android:textSize="14sp" />
+
+                        <View
+                            android:id="@+id/viewOfReview"
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_below="@+id/rl_1"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="5dp"
+                            android:background="@color/black" />
+
+                    </LinearLayout>
+
+
+
+
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:layout_weight="1"
+                    android:id="@+id/llDecription"
+                    android:visibility="visible"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+
+                    <TextView
+                        android:id="@+id/txt_description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="15dp"
+                        android:fontFamily="@font/open_sans_regular"
+                        android:text="-"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
+
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rec_product_video"
+                        android:layout_width="match_parent"
+                        android:layout_below="@+id/txt_description"
+                        android:layout_height="wrap_content" />
+
+                    <ImageView
+                        android:id="@+id/img_video"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginBottom="10dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/download"
+                        android:visibility="gone" />
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:layout_weight="1"
+                    android:id="@+id/llReview"
+                    android:orientation="vertical">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/recyclerviewReviews"/>
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
         </LinearLayout>
     </ScrollView>
 
