--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/reward"
-        android:icon="@drawable/reward1"
-        android:title="Reward" />
+        android:icon="@drawable/ic_feed"
+        android:title="Feed" />
 
     <item
         android:id="@+id/nav_fav"
-        android:icon="@drawable/fav"
-        android:title="Favorites" />
+        android:icon="@drawable/icmypost"
+        android:title="My Post" />
     <item
         android:id="@+id/home_page"
         android:icon="@drawable/home_100"
@@ -26,3 +26,4 @@
 
 
 </menu>
+
